<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/grey"
android:orientation="vertical"
tools:context=".AgregarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="#008577" />
    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:padding="16dp">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tituloTema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloTema"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@+id/topbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="320dp"
                    android:layout_height="200dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp">
                    <ImageButton
                        android:id="@+id/fotoTema"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/noneContentIMG"
                        android:scaleType="fitCenter"
                        app:backgroundTint="@android:color/white"
                        android:src="@drawable/addimagen" />
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/descripcionTema"
                        android:layout_width="300dp"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="@string/descripcionTema"
                        android:textColor="#424242"
                        android:textSize="21sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/listaHechos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/proximanovaregular"
                    android:gravity="center"
                    android:padding="13dp"
                    android:text="@string/hechosRelevantesTema"
                    android:textAllCaps="true"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/lightgrey" />
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/lightgrey" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/personalinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingEnd="8dp">
                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:contentDescription="@string/noneContentIMG"
                                android:padding="5dp"
                                android:src="@drawable/hecho" />
                            <TextView
                                android:id="@+id/primerHecho"
                                android:layout_width="wrap_content"
                                android:minWidth="271dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="20dp"
                                android:clickable="false"
                                android:focusable="false"
                                android:fontFamily="@font/proximanovaregular"
                                android:gravity="center_vertical"
                                android:text="@string/primerHecho"
                                android:textColor="@color/goodgrey"
                                android:textSize="15sp" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical"
                            android:paddingRight="8dp">
                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:padding="5dp"
                                android:src="@drawable/hecho" />
                            <TextView
                                android:id="@+id/segundoHecho"
                                android:layout_width="wrap_content"
                                android:minWidth="271dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="20dp"
                                android:clickable="false"
                                android:focusable="false"
                                android:fontFamily="@font/proximanovaregular"
                                android:gravity="center_vertical"
                                android:text="@string/segundoHecho"
                                android:textColor="@color/goodgrey"
                                android:textSize="15sp" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center" >
                            <Button
                                android:id="@+id/btnAgregarHechoRelevante"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/agregarHechos"
                                android:textColor="#009688"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center" >
                            <Button
                                android:id="@+id/btnAgregarTema"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/agregarTema"
                                android:textColor="#009688"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>